[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Kumar Utsav"]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^0.12.14"
dagit = "^0.12.14"
mlflow = "^1.20.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
