[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Kumar Utsav"]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^0.12.14"
dagit = "^0.12.14"
mlflow = "^1.20.2"
boto3 = "^1.18.58"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
elastic-apm = "^6.5.0"
psutil = "^5.8.0"
scikit-learn = "^1.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
